--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="nmedia">NMedia!</string>
+    <string name="nmedia">НМедиа!</string>
     <string name="app_name">НМедиа</string>
+    <string name="description_post_author_avatar">Аватар автора поста</string>
+    <string name="description_post_menu">Меню поста</string>
+    <string name="favorite">Нравится</string>
+    <string name="share">Поделиться</string>
+    <string name="remove">Просмотры</string>
 </resources>
