--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -4,4 +4,8 @@
     <string name="nmedia">NMedia!</string>
     <string name="description_post_author_avatar">Post author avatar</string>
     <string name="description_post_menu">Post menu</string>
+    <string name="post_text">Post text</string>
+    <string name="description_post_save">Save</string>
+    <string name="description_post_cancel">Cancel</string>
+    <string name="error_empty_content">Content can\'t be empty</string>
 </resources>
