--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -6,5 +6,11 @@
     <string name="description_post_menu">Меню поста</string>
     <string name="favorite">Нравится</string>
     <string name="share">Поделиться</string>
-    <string name="remove">Просмотры</string>
+    <string name="views">Просмотры</string>
+    <string name="menu_remove">Удалить</string>
+    <string name="menu_edit">Редактировать</string>
+    <string name="post_text">Текст поста</string>
+    <string name="description_post_save">Сохранить</string>
+    <string name="description_post_cancel">Отменить</string>
+    <string name="error_empty_content">Сообщение не может быть пустым</string>
 </resources>
