--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -13,4 +13,7 @@
     <string name="description_post_save">Сохранить</string>
     <string name="description_post_cancel">Отменить</string>
     <string name="error_empty_content">Сообщение не может быть пустым</string>
+    <string name="add_post">Добавить пост</string>
+    <string name="enter_text">Введите текст</string>
+    <string name="play_video">Воспроизвести видео</string>
 </resources>
