--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,12 @@
     <string name="add_post">Add post</string>
     <string name="enter_text">Enter the text</string>
     <string name="play_video">Play video</string>
+    <string name="empty_content_error">Content is empty</string>
+    <string name="channel_remote_name">Server notifications</string>
+    <string name="channel_remote_description">Notifications from remote server</string>
+    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
+    <string name="notification_user_new_posted">%1$s posted a new post</string>
+    <string name="google_play_unavailable">Google API Unavailable</string>
+    <string name="error_notification_title">You are using an old version of the application</string>
+    <string name="error_notification_text">Please update the application for correct operation</string>
 </resources>
