--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -8,4 +8,12 @@
     <string name="description_post_save">Save</string>
     <string name="description_post_cancel">Cancel</string>
     <string name="error_empty_content">Content can\'t be empty</string>
+    <string name="empty_content_error">Content is empty</string>
+    <string name="channel_remote_name">Server notifications</string>
+    <string name="channel_remote_description">Notifications from remote server</string>
+    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
+    <string name="notification_user_new_posted">%1$s posted a new post</string>
+    <string name="google_play_unavailable">Google API Unavailable</string>
+    <string name="error_notification_title">You are using an old version of the application</string>
+    <string name="error_notification_text">Please update the application for correct operation</string>
 </resources>
