--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -16,4 +16,12 @@
     <string name="add_post">Добавить пост</string>
     <string name="enter_text">Введите текст</string>
     <string name="play_video">Воспроизвести видео</string>
+    <string name="empty_content_error">Контент отсутствует</string>
+    <string name="channel_remote_name">Уведомление сервера</string>
+    <string name="channel_remote_description">Уведомления с удалённого сервера</string>
+    <string name="notification_user_liked">Пользователь %1$s поставил лайк посту %2$s</string>
+    <string name="notification_user_new_posted">%1$s опубликовал новый пост</string>
+    <string name="google_play_unavailable">Google API не доступен</string>
+    <string name="error_notification_title">Вы используете старую версию приложения</string>
+    <string name="error_notification_text">Пожалуйста, обновите приложение для корректной работы</string>
 </resources>
