--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -20,4 +20,5 @@
     <string name="retry">Retry</string>
     <string name="empty_posts">Empry posts</string>
     <string name="post_image">Post image</string>
+    <string name="new_post" >New post</string>
 </resources>
