--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -28,4 +28,5 @@
     <string name="retry">Повторить</string>
     <string name="empty_posts">Пустые сообщения</string>
     <string name="post_image">Изображение</string>
+    <string name="new_post">Новый пост</string>
 </resources>
