--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -21,4 +21,7 @@
     <string name="empty_posts">Empry posts</string>
     <string name="post_image">Post image</string>
     <string name="new_post" >New post</string>
+    <string name="sing_in">Sing In</string>
+    <string name="sing_up">Sing Up</string>
+    <string name="logout">Logout</string>
 </resources>
